# fortuneX

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
client/: client.ts
crank/: bot-config.ts  draw.ts
frontend/: .gitignore  App.tsx  app.json  metro.config.js  package-lock.json  package.json
frontend/android/: settings.gradle
frontend/android/app/: build.gradle
frontend/components/: AccountInfo.tsx  AllPools.tsx  ConnectButton.tsx  DisconnectButton.tsx  History.tsx  LoadingIndicator.tsx  LotteryPool.tsx  LotteryPoolInfo.tsx  PoolInfoComponent.tsx  Profile.tsx  RecentWinner.tsx  RequestAirdropButton.tsx  RequestUSDCAirdropButton.tsx  Ticket.tsx  TicketDetailsModal.tsx
frontend/components/providers/: AuthorizationProvider.tsx  NavigationProvider.tsx  ToastProvider.tsx
frontend/components/styles/: lottery-pool.ts
frontend/hooks/: useLotteryPools.ts
frontend/ios/: Podfile
frontend/ios/FortuneX/: AppDelegate.mm  (+2 more)
frontend/ios/FortuneX.xcodeproj/: project.pbxproj
frontend/screens/: MainScreen.tsx
frontend/util/: constants.ts  utils.ts
idl/: fortunex.json
programs/fortunex/: Cargo.toml
programs/fortunex/src/: constants.rs  enums.rs  errors.rs  lib.rs  state.rs
programs/fortunex/src/handlers/: buy_ticket.rs  cancel_ticket.rs  draw_winner.rs  initialize.rs  initialize_pool.rs  mod.rs  update_global_state.rs  update_whitelist.rs
programs/fortunex/src/instructions/: buy_ticket.rs  cancel_ticket.rs  draw_winner.rs  initialize.rs  initialize_pool.rs  mod.rs  update_global_state.rs  update_whitelist.rs
tests/: fortunex.ts
(+7 files in other folders)
