[package]
name = "fortunex"
version = "0.1.0"
description = "A millionaire daily"
edition = "2025"

[lib]
crate-type = ["cdylib", "lib"]
name = "fortunex"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"

